feature | add product details

--- a/src/main/resources/templates/common-user/script.html
+++ b/src/main/resources/templates/common-user/script.html
@@ -2,25 +2,25 @@
     <!-- JS
 ============================================ -->
     <!-- Modernizer JS -->
-    <script th:src="@{etrade/assets/js/vendor/modernizr.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/modernizr.min.js}"></script>
     <!-- jQuery JS -->
-    <script th:src="@{etrade/assets/js/vendor/jquery.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/jquery.js}"></script>
     <!-- Bootstrap JS -->
-    <script th:src="@{etrade/assets/js/vendor/popper.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/bootstrap.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/slick.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/js.cookie.js}"></script>
-    <!-- <script th:src="@{assets/js/vendor/jquery.style.switcher.js"></script> -->
-    <script th:src="@{etrade/assets/js/vendor/jquery-ui.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/jquery.ui.touch-punch.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/jquery.countdown.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/sal.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/jquery.magnific-popup.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/imagesloaded.pkgd.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/isotope.pkgd.min.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/counterup.js}"></script>
-    <script th:src="@{etrade/assets/js/vendor/waypoints.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/popper.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/bootstrap.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/slick.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/js.cookie.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/jquery.style.switcher.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/jquery-ui.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/jquery.ui.touch-punch.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/jquery.countdown.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/sal.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/jquery.magnific-popup.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/imagesloaded.pkgd.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/isotope.pkgd.min.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/counterup.js}"></script>
+    <script th:src="@{/etrade/assets/js/vendor/waypoints.min.js}"></script>
 
     <!-- Main JS -->
-    <script th:src="@{etrade/assets/js/main.js}"></script>
+    <script th:src="@{/etrade/assets/js/main.js}"></script>
 </div>
