--- a/src/main/resources/templates/common-admin/sidebar.html
+++ b/src/main/resources/templates/common-admin/sidebar.html
@@ -77,12 +77,12 @@
                         </a>
                         <ul id="category" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                             <li class="">
-                                <a href="page-list-category.html">
+                                <a th:href="@{/admin/categories}">
                                     <i class="las la-minus"></i><span>List Category</span>
                                 </a>
                             </li>
                             <li class="">
-                                <a href="page-add-category.html">
+                                <a th:href="@{/admin/categories/add-category}">
                                     <i class="las la-minus"></i><span>Add Category</span>
                                 </a>
                             </li>
