mange user feature | done add-user, hasn't update, delete yet

--- a/src/main/resources/templates/admin/brands/page-add-brand.html
+++ b/src/main/resources/templates/admin/brands/page-add-brand.html
@@ -84,7 +84,7 @@
                                     </div>
                                 </div>
                                 <button th:value="Add" type="submit" class="btn btn-primary mr-2">Add brand</button>
-                                <button type="reset" class="btn btn-danger">Reset</button>
+                                <button type="reset" class="btn btn-danger" th:href="@{/admin/brands}">Cancel</button>
                             </form>
                         </div>
                     </div>
