--- a/src/main/resources/templates/admin/brands/page-edit-brand.html
+++ b/src/main/resources/templates/admin/brands/page-edit-brand.html
@@ -84,8 +84,9 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button th:value="Add" type="submit" class="btn btn-primary mr-2">Update category</button>
-                                <button type="reset" class="btn btn-danger">Reset</button>
+                                <button th:value="Add" type="submit" class="btn btn-primary mr-2">Update category
+                                </button>
+                                <button type="reset" class="btn btn-danger" th:href="@{/admin/brands}">Cancel</button>
                             </form>
                         </div>
                     </div>
