--- a/src/main/resources/templates/admin/user/user-profile.html
+++ b/src/main/resources/templates/admin/user/user-profile.html
@@ -25,7 +25,7 @@
 
     <div class="iq-sidebar  sidebar-default ">
         <div class="iq-sidebar-logo d-flex align-items-center justify-content-between">
-            <a href="index.html" class="header-logo">
+            <a href="../index.html" class="header-logo">
                 <img src="assets/images/logo.png" class="img-fluid rounded-normal light-logo" alt="logo"><h5
                     class="logo-title light-logo ml-3">POSDash</h5>
             </a>
@@ -37,7 +37,7 @@
             <nav class="iq-sidebar-menu">
                 <ul id="iq-sidebar-toggle" class="iq-menu">
                     <li class="">
-                        <a href="index.html" class="svg-icon">
+                        <a href="../index.html" class="svg-icon">
                             <svg class="svg-icon" id="p-dash1" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                  stroke-linecap="round" stroke-linejoin="round">
@@ -67,12 +67,12 @@
                         </a>
                         <ul id="product" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                             <li class="">
-                                <a href="product/page-list-product.html">
+                                <a href="../product/page-list-product.html">
                                     <i class="las la-minus"></i><span>List Product</span>
                                 </a>
                             </li>
                             <li class="">
-                                <a href="product/page-add-product.html">
+                                <a href="../product/page-add-product.html">
                                     <i class="las la-minus"></i><span>Add Product</span>
                                 </a>
                             </li>
@@ -125,12 +125,12 @@
                         </a>
                         <ul id="sale" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                             <li class="">
-                                <a href="page-list-sale.html">
+                                <a href="../page-list-sale.html">
                                     <i class="las la-minus"></i><span>List Sale</span>
                                 </a>
                             </li>
                             <li class="">
-                                <a href="page-add-sale.html">
+                                <a href="../page-add-sale.html">
                                     <i class="las la-minus"></i><span>Add Sale</span>
                                 </a>
                             </li>
@@ -154,12 +154,12 @@
                         </a>
                         <ul id="purchase" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                             <li class="">
-                                <a href="page-list-purchase.html">
+                                <a href="../page-list-purchase.html">
                                     <i class="las la-minus"></i><span>List Purchases</span>
                                 </a>
                             </li>
                             <li class="">
-                                <a href="page-add-purchase.html">
+                                <a href="../page-add-purchase.html">
                                     <i class="las la-minus"></i><span>Add purchase</span>
                                 </a>
                             </li>
@@ -185,12 +185,12 @@
                         </a>
                         <ul id="return" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                             <li class="">
-                                <a href="page-list-returns.html">
+                                <a href="../page-list-returns.html">
                                     <i class="las la-minus"></i><span>List Returns</span>
                                 </a>
                             </li>
                             <li class="">
-                                <a href="page-add-return.html">
+                                <a href="../page-add-return.html">
                                     <i class="las la-minus"></i><span>Add Return</span>
                                 </a>
                             </li>
@@ -216,12 +216,12 @@
                         </a>
                         <ul id="people" class="iq-submenu collapse" data-parent="#iq-sidebar-toggle">
                             <li class="">
-                                <a href="page-list-customers.html">
+                                <a href="../page-list-customers.html">
                                     <i class="las la-minus"></i><span>Customers</span>
                                 </a>
                             </li>
                             <li class="">
-                                <a href="page-add-customers.html">
+                                <a href="../page-add-customers.html">
                                     <i class="las la-minus"></i><span>Add Customers</span>
                                 </a>
                             </li>
@@ -248,7 +248,7 @@
                         </ul>
                     </li>
                     <li class="">
-                        <a href="page-report.html" class="">
+                        <a href="../page-report.html" class="">
                             <svg class="svg-icon" id="p-dash7" width="20" height="20" xmlns="http://www.w3.org/2000/svg"
                                  viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
                                  stroke-linecap="round" stroke-linejoin="round">
@@ -481,12 +481,12 @@
                                 </a>
                                 <ul id="auth" class="iq-submenu collapse" data-parent="#otherpage">
                                     <li class="">
-                                        <a href="auth-sign-in.html">
+                                        <a href="../auth-sign-in.html">
                                             <i class="las la-minus"></i><span>Login</span>
                                         </a>
                                     </li>
                                     <li class="">
-                                        <a href="auth-sign-up.html">
+                                        <a href="../auth-sign-up.html">
                                             <i class="las la-minus"></i><span>Register</span>
                                         </a>
                                     </li>
@@ -634,7 +634,7 @@
                                 </ul>
                             </li>
                             <li class="">
-                                <a href="pages-invoice.html" class="svg-icon">
+                                <a href="../pages-invoice.html" class="svg-icon">
                                     <svg class="svg-icon" id="p-dash07" width="20" height="20"
                                          xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none"
                                          stroke="currentColor" stroke-width="2" stroke-linecap="round"
@@ -727,7 +727,7 @@
             <nav class="navbar navbar-expand-lg navbar-light p-0">
                 <div class="iq-navbar-logo d-flex align-items-center justify-content-between">
                     <i class="ri-menu-line wrapper-menu"></i>
-                    <a href="index.html" class="header-logo">
+                    <a href="../index.html" class="header-logo">
                         <img src="assets/images/logo.png" class="img-fluid rounded-normal" alt="logo">
                         <h5 class="logo-title ml-3">POSDash</h5>
 
@@ -968,7 +968,7 @@
                                                 <p class="mb-0">Since 10 march, 2020</p>
                                                 <div class="d-flex align-items-center justify-content-center mt-3">
                                                     <a href="user-profile.html" class="btn border mr-2">Profile</a>
-                                                    <a href="auth-sign-in.html" class="btn border">Sign Out</a>
+                                                    <a href="../auth-sign-in.html" class="btn border">Sign Out</a>
                                                 </div>
                                             </div>
                                         </div>
