--- a/src/main/resources/templates/common-admin/content.html
+++ b/src/main/resources/templates/common-admin/content.html
@@ -5,7 +5,7 @@
                 <div class="col-lg-4">
                     <div class="card card-transparent card-block card-stretch card-height border-none">
                         <div class="card-body p-0 mt-lg-2 mt-0">
-                            <h3 class="mb-3">Hi Graham, Good Morning</h3>
+                            <h3 class="mb-3">Hi Admin, Good Morning</h3>
                             <p class="mb-0 mr-4">Your dashboard gives you views of key performance or business
                                 process.</p>
                         </div>
@@ -18,7 +18,8 @@
                                 <div class="card-body">
                                     <div class="d-flex align-items-center mb-4 card-total-sale">
                                         <div class="icon iq-icon-box-2 bg-info-light">
-                                            <img src="assets/images/product/1.png" class="img-fluid" alt="image">
+                                            <img th:src="@{/admin/assets/images/product/1.png}" class="img-fluid"
+                                                 alt="image">
                                         </div>
                                         <div>
                                             <p class="mb-2">Total Sales</p>
@@ -37,7 +38,8 @@
                                 <div class="card-body">
                                     <div class="d-flex align-items-center mb-4 card-total-sale">
                                         <div class="icon iq-icon-box-2 bg-danger-light">
-                                            <img src="assets/images/product/2.png" class="img-fluid" alt="image">
+                                            <img th:src="@{/admin/assets/images/product/2.png}" class="img-fluid"
+                                                 alt="image">
                                         </div>
                                         <div>
                                             <p class="mb-2">Total Cost</p>
@@ -56,7 +58,8 @@
                                 <div class="card-body">
                                     <div class="d-flex align-items-center mb-4 card-total-sale">
                                         <div class="icon iq-icon-box-2 bg-success-light">
-                                            <img src="assets/images/product/3.png" class="img-fluid" alt="image">
+                                            <img th:src="@{/admin/assets/images/product/3.png}" class="img-fluid"
+                                                 alt="image">
                                         </div>
                                         <div>
                                             <p class="mb-2">Product Sold</p>
@@ -151,7 +154,7 @@
                                     <div class="card card-block card-stretch card-height mb-0">
                                         <div class="card-body">
                                             <div class="bg-warning-light rounded">
-                                                <img src="assets/images/product/01.png"
+                                                <img th:src="@{/admin/assets/images/product/01.png}"
                                                      class="style-img img-fluid m-auto p-3" alt="image">
                                             </div>
                                             <div class="style-text text-left mt-3">
@@ -165,7 +168,7 @@
                                     <div class="card card-block card-stretch card-height mb-0">
                                         <div class="card-body">
                                             <div class="bg-danger-light rounded">
-                                                <img src="assets/images/product/02.png"
+                                                <img th:src="@{/admin/assets/images/product/02.png}"
                                                      class="style-img img-fluid m-auto p-3" alt="image">
                                             </div>
                                             <div class="style-text text-left mt-3">
@@ -179,7 +182,7 @@
                                     <div class="card card-block card-stretch card-height mb-0">
                                         <div class="card-body">
                                             <div class="bg-info-light rounded">
-                                                <img src="assets/images/product/03.png"
+                                                <img th:src="@{/admin/assets/images/product/03.png}"
                                                      class="style-img img-fluid m-auto p-3" alt="image">
                                             </div>
                                             <div class="style-text text-left mt-3">
@@ -193,7 +196,7 @@
                                     <div class="card card-block card-stretch card-height mb-0">
                                         <div class="card-body">
                                             <div class="bg-success-light rounded">
-                                                <img src="assets/images/product/02.png"
+                                                <img th:src="@{/admin/assets/images/product/02.png}"
                                                      class="style-img img-fluid m-auto p-3" alt="image">
                                             </div>
                                             <div class="style-text text-left mt-3">
@@ -222,7 +225,8 @@
                         <div class="card-body card-item-right">
                             <div class="d-flex align-items-top">
                                 <div class="bg-warning-light rounded">
-                                    <img src="assets/images/product/04.png" class="style-img img-fluid m-auto"
+                                    <img th:src="@{/admin/assets/images/product/04.png}"
+                                         class="style-img img-fluid m-auto"
                                          alt="image">
                                 </div>
                                 <div class="style-text text-left">
@@ -237,7 +241,8 @@
                         <div class="card-body card-item-right">
                             <div class="d-flex align-items-top">
                                 <div class="bg-danger-light rounded">
-                                    <img src="assets/images/product/05.png" class="style-img img-fluid m-auto"
+                                    <img th:src="@{/admin/assets/images/product/05.png}"
+                                         class="style-img img-fluid m-auto"
                                          alt="image">
                                 </div>
                                 <div class="style-text text-left">
