--- a/src/main/resources/templates/common-admin/footer.html
+++ b/src/main/resources/templates/common-admin/footer.html
@@ -13,8 +13,7 @@
                         <div class="col-lg-6 text-right">
                             <span class="mr-1"><script>document.write(new Date().getFullYear())</script>©</span> <a
                                 href="#"
-                                class="">POS
-                            Dash</a>.
+                                class="">HCMUTE</a>.
                         </div>
                     </div>
                 </div>
