--- a/src/main/resources/templates/admin/categories/page-add-category.html
+++ b/src/main/resources/templates/admin/categories/page-add-category.html
@@ -64,7 +64,8 @@
                                     </div>
                                 </div>
                                 <button th:value="Add" type="submit" class="btn btn-primary mr-2">Add category</button>
-                                <button type="reset" class="btn btn-danger">Reset</button>
+                                <button type="reset" class="btn btn-danger" th:href="@{/admin/categories}">Cancel
+                                </button>
                             </form>
                         </div>
                     </div>
