--- a/src/main/resources/templates/admin/categories/page-edit-category.html
+++ b/src/main/resources/templates/admin/categories/page-edit-category.html
@@ -64,8 +64,10 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button th:value="Add" type="submit" class="btn btn-primary mr-2">Update category</button>
-                                <button type="reset" class="btn btn-danger">Reset</button>
+                                <button th:value="Add" type="submit" class="btn btn-primary mr-2">Update category
+                                </button>
+                                <button type="reset" class="btn btn-danger" th:href="@{/admin/categories}">Cancel
+                                </button>
                             </form>
                         </div>
                     </div>
