--- a/src/main/resources/templates/admin/page-list-sale.html
+++ b/src/main/resources/templates/admin/page-list-sale.html
@@ -302,17 +302,17 @@
                                 </a>
                                 <ul id="user" class="iq-submenu collapse" data-parent="#otherpage">
                                     <li class="">
-                                        <a href="user-profile.html">
+                                        <a href="user/user-profile.html">
                                             <i class="las la-minus"></i><span>User Profile</span>
                                         </a>
                                     </li>
                                     <li class="">
-                                        <a href="user-add.html">
+                                        <a href="user/user-add.html">
                                             <i class="las la-minus"></i><span>User Add</span>
                                         </a>
                                     </li>
                                     <li class="">
-                                        <a href="user-list.html">
+                                        <a href="user/user-list.html">
                                             <i class="las la-minus"></i><span>User List</span>
                                         </a>
                                     </li>
@@ -967,7 +967,7 @@
                                                 <h5 class="mb-1">JoanDuo@property.com</h5>
                                                 <p class="mb-0">Since 10 march, 2020</p>
                                                 <div class="d-flex align-items-center justify-content-center mt-3">
-                                                    <a href="user-profile.html" class="btn border mr-2">Profile</a>
+                                                    <a href="user/user-profile.html" class="btn border mr-2">Profile</a>
                                                     <a href="auth-sign-in.html" class="btn border">Sign Out</a>
                                                 </div>
                                             </div>
