--- a/src/main/resources/templates/admin/product/page-update-product.html
+++ b/src/main/resources/templates/admin/product/page-update-product.html
@@ -181,7 +181,7 @@
                               </div>
                           </div>                            
                           <button type="submit" class="btn btn-primary mr-2">Add Product</button>
-                          <button type="reset" class="btn btn-danger">Reset</button>
+                          <button type="reset" class="btn btn-danger" th:href="@{/admin/products}">Cancel</button>
                       </form>
                   </div>
               </div>
