--- a/src/main/resources/templates/admin/user/user-list.html
+++ b/src/main/resources/templates/admin/user/user-list.html
@@ -94,12 +94,12 @@
                                                 <a class="btn btn-sm bg-primary" data-toggle="tooltip"
                                                    data-placement="top" title=""
                                                    data-original-title="Edit"
-                                                   th:href="@{/admin/users/update(id=${user.id})}"><i
+                                                   th:href="@{/admin/user/update(id=${user.id})}"><i
                                                         class="ri-pencil-line mr-0"></i></a>
                                                 <a class="btn btn-sm bg-primary" data-toggle="tooltip"
                                                    data-placement="top" title=""
                                                    data-original-title="Delete"
-                                                   th:href="@{/admin/users/delete(id=${user.id})}"><i
+                                                   th:href="@{/admin/user/disable(id=${user.id})}"><i
                                                         class="ri-delete-bin-line mr-0"></i></a>
                                             </div>
                                         </td>
@@ -134,6 +134,13 @@
         </div>
     </div>
 </div>
+
+<div th:if="${param.error}">
+    <script type="text/javascript">
+        alert("Khong thể disable accout hiện tại!")
+    </script>
+</div>
+
 <!-- Wrapper End-->
 <div th:insert="~{common-admin/footer::footer}"></div>
 <div th:insert="~{common-admin/script::script}"></div>
