--- a/src/main/resources/templates/admin/user/user-update.html
+++ b/src/main/resources/templates/admin/user/user-update.html
@@ -22,9 +22,7 @@
             <form th:action="@{/admin/user/create}" method="post"
                   th:object="${userDto}">
                 <div class="row">
-
                     <div class="col-xl-3 col-lg-4">
-
                         <div class="card">
                             <div class="card-header d-flex justify-content-between">
                                 <div class="header-title">
@@ -107,7 +105,6 @@
                                             <label>Day of birth: </label>
                                             <input type="date"
                                                    class="form-control"
-                                                   placeholder="Enter Day of birth"
                                                    th:field="*{dayOfBirth}">
                                             <p th:if="${#fields.hasErrors('dayOfBirth')}" th:errors="*{dayOfBirth}"
                                                style="color: red;"></p>
@@ -172,7 +169,7 @@
                                         <label><input class="mr-2" type="checkbox">Enable
                                             Two-Factor-Authentication</label>
                                     </div>
-                                    <button type="submit" class="btn btn-primary">Add New User</button>
+                                    <button type="submit" class="btn btn-primary">Update Credential User</button>
                                     <a th:href="@{/admin/user}" class="btn btn-secondary">Cancel</a>
                                 </div>
                             </div>
